--- a/myFirstAngularApp/src/app/hero-detail/hero-detail.component.html
+++ b/myFirstAngularApp/src/app/hero-detail/hero-detail.component.html
@@ -1,11 +1,13 @@
-<ul>
+<ul [appHighlight]="'blue'">
+    <!-- ilyen dupla aposztrófba kell rakni, mert stringet keresünk, ha nem lenne, akkor változót keresne -->
     <li>
-        <p>{{ hero.name | prefix:'Herr.' }}</p> <!-- Így adunk értéket a pipe-nak, alaból Mr. de most Herr.  így-e! -->
+        <p *appDelay="5000">{{ hero.name | prefix:'Herr.' }}</p>
+        <!-- Így adunk értéket a pipe-nak, alaból Mr. de most Herr.  így-e! -->
     </li>
     <li>
-        <p>{{ hero.address }}</p>
+        <p *appDelay="7500">{{ hero.address }}</p>
     </li>
     <li>
-        <p>{{ hero.superpower }}</p>
+        <p *appDelay="10000">{{ hero.superpower }}</p>
     </li>
 </ul>
