--- a/myFirstAngularApp/src/app/hero/hero.component.html
+++ b/myFirstAngularApp/src/app/hero/hero.component.html
@@ -1,5 +1,13 @@
 <div class="row">
     <div class="col-8 offset-2">
+        <input class="form-control" #search type="text" (keyup)="0">
+        <p>{{ search.value }}</p>
+    </div>
+</div>
+
+
+<div class="row">
+    <div class="col-8 offset-2">
         <table class="table table-striped">
             <thead>
                 <tr>
