--- a/ang-basic-practice008-forms/src/app/page/event-editor/event-editor.component.html
+++ b/ang-basic-practice008-forms/src/app/page/event-editor/event-editor.component.html
@@ -26,8 +26,8 @@
       </div>
       <div class="form-group">
         <label for="">Country</label>
-        <input name="country" [(ngModel)]="event.location.country" type="text" class="form-control" pattern=".{5,25}"
-          required>
+        <input name="country" [(ngModel)]="event.location.country" type="text" class="form-control"
+          pattern=".[A-Z ]{5,25}" required>
         <div [hidden]="eventForm.controls.country?.valid" class="error-message">
           The Country must be minimum 5, but not more then 25 characters and it must be CAPITALIZED.
         </div>
