--- a/ang-basic-practice008-forms/src/app/page/event-editor/event-editor.component.scss
+++ b/ang-basic-practice008-forms/src/app/page/event-editor/event-editor.component.scss
@@ -1,5 +1,11 @@
 .error-message {
   font-style: italic;
-  font-size: 0.8em;
-  color: rgb(155, 4, 4);
+  font-size: 0.9em;
+  color: rgb(224, 1, 1);
+  animation: fadeIn ease 2s;
+
+}
+@keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
 }
