--- a/ang-basic-practice008-forms/src/app/page/events-list/events-list.component.html
+++ b/ang-basic-practice008-forms/src/app/page/events-list/events-list.component.html
@@ -2,9 +2,12 @@
   <div class="row">
 
     <h3 class="my-3">All of the events should show below</h3>
-    <button class=" newEventButton btn btn-secondary offset-6 my-3 " [routerLink]="['event/0']">
-      <i class="fa fa-plus"></i>
-    </button>
+    <div class="add-group offset-5 my-3">
+      <label class="mx-2 h6" for="">Add new Event:</label>
+      <button class=" newEventButton btn btn-success" (click)="addNewEvent()" [routerLink]="['event/0']">
+        <i class="fa fa-plus"></i>
+      </button>
+    </div>
 
     <div class="row col-12">
       <table class="table">
@@ -14,6 +17,7 @@
             <th>Date</th>
             <th>Time</th>
             <th>Address</th>
+            <th></th>
             <th></th>
           </tr>
         </thead>
@@ -27,6 +31,9 @@
               <div class="btn-group">
                 <button [routerLink]="['event/' + event.id]" class="btn btn-info">
                   <i class="fa fa-pencil"></i>
+                </button>
+                <button (click)="removeEvent(event.id, event)" class="btn btn-danger ml-2">
+                  <i class="fa fa-trash"></i>
                 </button>
               </div>
             </td>
