--- a/ang-basic-practice008-forms/src/app/page/event-editor/event-editor.component.html
+++ b/ang-basic-practice008-forms/src/app/page/event-editor/event-editor.component.html
@@ -49,8 +49,9 @@
         </div>
       </div>
 
-      <button [disabled]="eventForm.invalid" type="submit" class="btn btn-primary btn-block btn-lg">
-        <i class="fa fa-save"></i>
+      <button [disabled]="eventForm.invalid || submition" type="submit" class="btn btn-primary btn-block btn-lg">
+        <i *ngIf="!submition" class="fa fa-save"></i>
+        <i *ngIf="submition" class="fa fa-refresh"></i>
       </button>
     </form>
   </div>
