--- a/ang-basic-practice008-forms/src/app/page/events-list/events-list.component.html
+++ b/ang-basic-practice008-forms/src/app/page/events-list/events-list.component.html
@@ -32,7 +32,7 @@
                 <button [routerLink]="['event/' + event.id]" class="btn btn-info">
                   <i class="fa fa-pencil"></i>
                 </button>
-                <button (click)="removeEvent(event.id, event)" class="btn btn-danger ml-2">
+                <button (click)="removeEvent(event)" class="btn btn-danger ml-2">
                   <i class="fa fa-trash"></i>
                 </button>
               </div>
